# Epidemic

./: .gitignore  .gitmodules  Assist.cpp  CMakeLists.txt  Makefile  Person.cpp  Person.h  README.md  Simulation.cpp  Simulation.h  main.cpp
data/: data.csv.0  data.csv.12  data.csv.15  data.csv.16  data.csv.18  data.csv.2  data.csv.20  data.csv.21  data.csv.25  data.csv.26  data.csv.27  data.csv.29  data.csv.3  data.csv.32  data.csv.33  data.csv.35  data.csv.37  data.csv.38  data.csv.39  data.csv.46  data.csv.49  data.csv.50  data.csv.55  data.csv.57  data.csv.58  data.csv.59  data.csv.6  data.csv.60  data.csv.61  data.csv.63  data.csv.67  data.csv.68  data.csv.75  data.csv.76  data.csv.77  data.csv.8  data.csv.83  data.csv.84  data.csv.85  data.csv.87  (+6 more)
src/: .clang-format  CMakeLists.txt  Person.cpp  Person.h  Plotting.h  Simulation.cpp  Simulation.h  main.cpp
